🚀 Add 6 powerful integration modules
New Enhancement Modules:
- bael-unified-search.js: Cross-system universal search (Ctrl+/)
- bael-hotkey-reference.js: Visual keyboard shortcut overlay (?)
- bael-system-status.js: Real-time health monitoring (Ctrl+Shift+S)
- bael-favorites-hub.js: Unified favorites system (Ctrl+Shift+B)
- bael-ai-insights.js: AI-powered usage analytics (Ctrl+Shift+I)
- bael-quick-launcher.js: Spotlight-style launcher (Double-tap Ctrl)

Features:
- Universal search across Memory, Files, Chats, Templates, Commands, Settings
- 40+ documented keyboard shortcuts with Mac/Windows adaptation
- Real-time API latency charts and module health monitoring
- Favorites across 6 types with quick-add functionality
- Usage tracking, efficiency metrics, and actionable recommendations
- Double-tap Ctrl spotlight launcher for instant access

Total Bael modules: 272

--- a/webui/index.html
+++ b/webui/index.html
@@ -1587,6 +1587,33 @@
     <script src="js/bael-codeblock.js"></script>
     <script src="js/bael-list.js"></script>
 
+    <!-- BAEL Power Systems - Ultimate Integration -->
+    <script src="js/bael-supremacy.js"></script>
+    <script src="js/bael-domination.js"></script>
+    <script src="js/bael-omniscient.js"></script>
+    <script src="js/bael-exploit.js"></script>
+    <script src="js/bael-settings-bridge.js"></script>
+
+    <!-- BAEL GUI Unification Layer - Complete Integration -->
+    <script src="js/bael-gui-unifier.js"></script>
+    <script src="js/bael-alpine-bridge.js"></script>
+
+    <!-- BAEL Dashboards & Management Interfaces -->
+    <script src="js/bael-memory-dashboard.js"></script>
+    <script src="js/bael-agent-console.js"></script>
+    <script src="js/bael-heisenberg-control.js"></script>
+    <script src="js/bael-performance-dashboard.js"></script>
+    <script src="js/bael-command-center.js"></script>
+    <script src="js/bael-template-library.js"></script>
+
+    <!-- BAEL Enhanced Integration Modules -->
+    <script src="js/bael-unified-search.js"></script>
+    <script src="js/bael-hotkey-reference.js"></script>
+    <script src="js/bael-system-status.js"></script>
+    <script src="js/bael-favorites-hub.js"></script>
+    <script src="js/bael-ai-insights.js"></script>
+    <script src="js/bael-quick-launcher.js"></script>
+
     <!-- BAEL Master Controller - Orchestrates All Systems -->
     <script src="js/bael-master-controller.js"></script>
 
