🎯 Add 3 more power modules + total 275 Bael modules
New User Experience Modules:
- bael-onboarding-tour.js: Interactive feature discovery with guided tours
- bael-preset-manager.js: Save & apply configuration presets (Ctrl+Shift+R)
- bael-usage-analytics.js: Comprehensive usage tracking & reports (Ctrl+Shift+U)

Features:
- Welcome modal for first-run users with quick feature overview
- 3 guided tours: Quick Start, Power Features, Advanced Features
- Spotlight-style step-by-step tutorial system
- Built-in presets: Coding, Creative, Research, Assistant modes
- Quick preset switching with Ctrl+1-9
- Detailed usage analytics with activity charts
- Session tracking, message counts, feature usage stats
- Export analytics to JSON/CSV

Total Bael modules: 275 (9 new this session)

--- a/webui/index.html
+++ b/webui/index.html
@@ -1614,6 +1614,11 @@
     <script src="js/bael-ai-insights.js"></script>
     <script src="js/bael-quick-launcher.js"></script>
 
+    <!-- BAEL User Experience Modules -->
+    <script src="js/bael-onboarding-tour.js"></script>
+    <script src="js/bael-preset-manager.js"></script>
+    <script src="js/bael-usage-analytics.js"></script>
+
     <!-- BAEL Master Controller - Orchestrates All Systems -->
     <script src="js/bael-master-controller.js"></script>
 
