🚀 BAEL Advanced Productivity Suite - 7 new modules
✨ NEW MODULES:
• bael-snippets-manager.js - Code snippets storage (Ctrl+Shift+S)
• bael-snippets-vault.js - Enhanced snippets vault with grid (Ctrl+Shift+V)
• bael-sync-center.js - Cross-device sync & backup (Ctrl+Shift+B)
• bael-status-bar.js - Persistent system status bar
• bael-theme-customizer.js - Custom theme builder (Ctrl+Shift+Y)
• bael-voice-commander.js - Voice control interface (Ctrl+Shift+M)
• bael-workspace-layouts.js - Save/restore UI layouts (Ctrl+Shift+L)

📊 TOTAL: 300+ Bael modules in the system

--- a/webui/index.html
+++ b/webui/index.html
@@ -1618,6 +1618,35 @@
     <script src="js/bael-onboarding-tour.js"></script>
     <script src="js/bael-preset-manager.js"></script>
     <script src="js/bael-usage-analytics.js"></script>
+    <script src="js/bael-automation-studio.js"></script>
+
+    <!-- BAEL Power & Productivity Tools -->
+    <script src="js/bael-power-bar.js"></script>
+    <script src="js/bael-file-preview.js"></script>
+    <script src="js/bael-snippets-vault.js"></script>
+    <script src="js/bael-workspace-layouts.js"></script>
+    <script src="js/bael-api-playground.js"></script>
+
+    <!-- BAEL Advanced Productivity Suite -->
+    <script src="js/bael-agent-profiles.js"></script>
+    <script src="js/bael-clipboard-manager.js"></script>
+    <script src="js/bael-quick-notes.js"></script>
+    <script src="js/bael-export-center.js"></script>
+    <script src="js/bael-drylink.js"></script>
+    <script src="js/bael-session-replay.js"></script>
+    <script src="js/bael-voice-commander.js"></script>
+    <script src="js/bael-pomodoro-timer.js"></script>
+    <script src="js/bael-progress-tracker.js"></script>
+    <script src="js/bael-quick-links.js"></script>
+    <script src="js/bael-theme-customizer.js"></script>
+    <script src="js/bael-chat-archiver.js"></script>
+    <script src="js/bael-smart-suggest.js"></script>
+    <script src="js/bael-metrics-dashboard.js"></script>
+    <script src="js/bael-sync-center.js"></script>
+    <script src="js/bael-code-runner.js"></script>
+    <script src="js/bael-snippets-manager.js"></script>
+    <script src="js/bael-command-history.js"></script>
+    <script src="js/bael-status-bar.js"></script>
 
     <!-- BAEL Master Controller - Orchestrates All Systems -->
     <script src="js/bael-master-controller.js"></script>
