🚀 BAEL Power User Toolkit - 5 Advanced Productivity Modules
- bael-actionable-suggestions.js: Smart contextual actions on text selection
- bael-reach-box.js: Global search command palette (Ctrl+/)
- bael-copy-box.js: Clipboard history & templates (Ctrl+Shift+V)
- bael-promptech.js: Prompt engineering toolkit (Ctrl+Shift+E)
- bael-feed-filter.js: Chat feed filtering & organization (Ctrl+Shift+Y)

Total Bael modules: 310+

--- a/webui/index.html
+++ b/webui/index.html
@@ -1648,6 +1648,22 @@
     <script src="js/bael-command-history.js"></script>
     <script src="js/bael-status-bar.js"></script>
 
+    <!-- BAEL Ultimate Enhancement Suite -->
+    <script src="js/bael-ai-tutor.js"></script>
+    <script src="js/bael-data-visualizer.js"></script>
+    <script src="js/bael-chat-insights.js"></script>
+    <script src="js/bael-keyboard-shortcuts.js"></script>
+    <script src="js/bael-favorites.js"></script>
+    <script src="js/bael-project-tips.js"></script>
+    <script src="js/bael-chat-history-search.js"></script>
+
+    <!-- BAEL Power User Toolkit -->
+    <script src="js/bael-actionable-suggestions.js"></script>
+    <script src="js/bael-reach-box.js"></script>
+    <script src="js/bael-copy-box.js"></script>
+    <script src="js/bael-promptech.js"></script>
+    <script src="js/bael-feed-filter.js"></script>
+
     <!-- BAEL Master Controller - Orchestrates All Systems -->
     <script src="js/bael-master-controller.js"></script>
 
