Add Bael advanced enhancement modules: Session tools, Smart Context, Voice Mix, Zen Mode, Smart Prompt
New modules added:
- bael-session-logger.js: Log and export all chat sessions with MutationObserver
- bael-session-notes.js: Quick notes & annotations during chat sessions
- bael-session-timer.js: Track session duration with break reminders
- bael-smart-context.js: Intelligent context window tracking and optimization
- bael-smart-prompt.js: AI-powered prompt templates and enhancement
- bael-voice-mix.js: Advanced voice control with TTS settings and presets
- bael-zen-mode.js: Ultra-minimal distraction-free chat interface

All modules include:
- Self-contained IIFE pattern with embedded CSS
- Keyboard shortcuts for quick access
- LocalStorage persistence
- Modern glassmorphic UI design
- Full integration with Bael ecosystem

--- a/webui/index.html
+++ b/webui/index.html
@@ -1664,6 +1664,44 @@
     <script src="js/bael-promptech.js"></script>
     <script src="js/bael-feed-filter.js"></script>
 
+    <!-- BAEL Pro Productivity Suite -->
+    <script src="js/bael-smart-context.js"></script>
+    <script src="js/bael-quick-data.js"></script>
+    <script src="js/bael-session-notes.js"></script>
+    <script src="js/bael-mode-swipe.js"></script>
+    <script src="js/bael-auto-guide.js"></script>
+
+    <!-- BAEL Developer Acceleration Pack -->
+    <script src="js/bael-auto-code.js"></script>
+    <script src="js/bael-quick-preview.js"></script>
+    <script src="js/bael-session-timer.js"></script>
+
+    <!-- BAEL Workspace Organization Suite -->
+    <script src="js/bael-chat-pods.js"></script>
+    <script src="js/bael-quick-run.js"></script>
+    <script src="js/bael-context-lens.js"></script>
+    <script src="js/bael-voice-mix.js"></script>
+    <script src="js/bael-read-view.js"></script>
+
+    <!-- BAEL Utility Tools Pack -->
+    <script src="js/bael-export-hub.js"></script>
+    <script src="js/bael-quick-diff.js"></script>
+    <script src="js/bael-priority-queue.js"></script>
+
+    <!-- BAEL Productivity Power Pack -->
+    <script src="js/bael-live-stats.js"></script>
+    <script src="js/bael-smart-prompt.js"></script>
+    <script src="js/bael-zen-mode.js"></script>
+    <script src="js/bael-scratch-pad.js"></script>
+    <script src="js/bael-agent-status.js"></script>
+
+    <!-- BAEL Developer Tools Suite -->
+    <script src="js/bael-code-vault.js"></script>
+    <script src="js/bael-conversation-finder.js"></script>
+    <script src="js/bael-endpoint-tester.js"></script>
+    <script src="js/bael-session-logger.js"></script>
+    <script src="js/bael-context-mapper.js"></script>
+
     <!-- BAEL Master Controller - Orchestrates All Systems -->
     <script src="js/bael-master-controller.js"></script>
 
